--- a/test.html
+++ b/test.html
@@ -1,11 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YAROSLAVCHIK</title>
+    <title>Шаверма - вкусно и просто</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #fffbe6;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #ff6600;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            font-size: 2em;
+            font-weight: bold;
+            letter-spacing: 2px;
+        }
+        main {
+            max-width: 600px;
+            margin: 30px auto;
+            padding: 10px 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px #ddd;
+        }
+        h1 {
+            color: #ff6600;
+        }
+        p {
+            line-height: 1.6;
+            font-size: 1.1em;
+        }
+        .shawarma-image {
+            display: block;
+            max-width: 100%;
+            margin: 20px auto;
+            border-radius: 10px;
+        }
+        footer {
+            text-align: center;
+            padding: 15px;
+            background-color: #333;
+            color: white;
+            font-size: 0.9em;
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
-    <p>development is cool</p>
+    <header>Шаверма</header>
+    <main>
+        <h1>Что такое шаверма?</h1>
+        <p>Шаверма — это вкусное и сытное блюдо, состоящее из тонко нарезанного мяса, завернутого в лаваш с овощами и соусом. Идеально подходит для быстрого и вкусного перекуса.</p>
+        <img class="shawarma-image" src="https://peterburg.center/sites/default/files/styles/long_image/public/0-shavatime_1_0.jpg" alt="Шаверма">
+        <h1>Ингредиенты</h1>
+        <p>Типичная шаверма включает в себя:</p>
+        <ul>
+            <li>Мясо (курица, говядина)</li>
+            <li>Свежие овощи (помидоры, огурцы, лук, капуста)</li>
+            <li>Лаваш</li>
+            <li>Соусы по вкусу (чесночный, острый)</li>
+        </ul>
+        <h1>Где попробовать?</h1>
+        <p>Шаверму можно найти во многих уличных кафе и киосках, а также заказать в ресторанах быстрого питания.</p>
+    </main>
+    <footer>© 2025 Вкусная шаверма</footer>
 </body>
 </html>
