--- a/test.html
+++ b/test.html
@@ -13,17 +13,44 @@
         <h1>Что такое шаверма?</h1>
         <p>Шаверма — это вкусное и сытное блюдо, состоящее из тонко нарезанного мяса, завернутого в лаваш с овощами и соусом. Идеально подходит для быстрого и вкусного перекуса.</p>
         <img class="shawarma-image" src="https://peterburg.center/sites/default/files/styles/long_image/public/0-shavatime_1_0.jpg" alt="Шаверма">
-        <h1>Ингредиенты</h1>
-        <p>Типичная шаверма включает в себя:</p>
-        <ul>
-            <li>Мясо (курица, говядина)</li>
-            <li>Свежие овощи (помидоры, огурцы, лук, капуста)</li>
-            <li>Лаваш</li>
-            <li>Соусы по вкусу (чесночный, острый)</li>
-        </ul>
+        <table class="table-shawarma">
+<caption>Цены на шаверму</caption>
+<thead>
+<tr>
+<th>Название</th>
+<th>Вес (г)</th>
+<th>Цена (₽)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Шаверма с курицей</td>
+<td>320</td>
+<td>200</td>
+</tr>
+<tr>
+<td>Шаверма со свининой</td>
+<td>380</td>
+<td>230</td>
+</tr>
+<tr>
+<td>Шаверма c курицей в сырном лаваше</td>
+<td>350</td>
+<td>260</td>
+</tr>
+<tr>
+<td>Острая шаверма с курицей</td>
+<td>380</td>
+<td>260</td>
+</tr>
+</tbody>
+</table>
+
+        <button onclick="window.location.href='page2.html'">Ингредиенты</button>
         <h1>Где попробовать?</h1>
         <p>Шаверму можно найти во многих уличных кафе и киосках, а также заказать в ресторанах быстрого питания.</p>
     </main>
     <footer>© 2025 Вкусная шаверма</footer>
+    <script src="script.js"></script>
 </body>
 </html>
