--- a/page2.html
+++ b/page2.html
@@ -8,6 +8,40 @@
 </head>
 <body>
     <header>Ингредиенты</header>
+    <div class = "container">
+        <div class = "border row">
+        <div class = "border col">
+            <p>0</p>
+        </div>
+        </div>
+        <div class = "border row">
+        <div class = "border col-3">
+            <p>1</p>
+        </div>
+        <div class = "border col-7">
+            <p>2</p>
+        </div>
+        <div class = "border col-2">
+            <p>3</p>
+        </div>
+        </div>
+                <div class = "border row">
+        <div class = "border col">
+            <p>4</p>
+        </div>
+        </div>
+        <div class = "border row">
+        <div class = "border col-4">
+            <p>5</p>
+        </div>
+        <div class = "border col-5">
+            <p>6</p>
+        </div>
+        <div class = "border col-3">
+            <p>7</p>
+        </div>
+        </div>
+    </div>
     <main>
     <ul>
     <li>
@@ -31,6 +65,7 @@
     </ul>
     </li>
 </ul>
+
 <ol>
     <li>Лепёшки
         <ul><li>Пшеничная</li><li>Сырная</li><li>Пита</li></ul>
@@ -45,5 +80,7 @@
 <button onclick="window.location.href='test.html'">Вернуться на главную</button>
 </main>
 <footer>© 2025 Вкусная шаверма</footer>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
